src/objects/POIRestunt__c.object
<CustomObject>
    <fields>
        <fullName>POIId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>POIId</label>
        <referenceTo>UIControl__c</referenceTo>
        <relationshipLabel>POIResults</relationshipLabel>
        <relationshipName>POIResults</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SurveyResult__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SurveyResult</label>
        <referenceTo>AuditResult__c</referenceTo>
        <relationshipLabel>POIResults</relationshipLabel>
        <relationshipName>POIResults</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>POIResult</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>POIRestunt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>POIResults</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>